# OSCAR

./: CMakeLists.txt  Cst.h  DataModel.cpp  DataModel.h  README.md  X.sln  _const.h  main.cpp  spaceTransform
Preprocess/: CONST.h  DBSCAN.cpp  DBSCAN.h  DcSTMC.cpp  DcSTMC.h  Postprocessor.cpp  Postprocessor.h  Preprocess.vcxproj  Preprocess.vcxproj.filters  Vectorization.cpp  Vectorization.h  main.cpp
Preprocess/Com/Src/: ClsGDALOperator.cpp  ClsGDALOperator.h  ClsGeneralOperator.cpp  ClsGeneralOperator.h  ClsHDF4Operator.cpp  ClsHDF4Operator.h
Preprocess/Dependencies/HDF4-x64-4-2-13/cmake/: hdf4-config.cmake  hdf4-targets-release.cmake  hdf4-targets.cmake  jpeg-config.cmake  jpeg-targets.cmake
Preprocess/Dependencies/HDF4-x64-4-2-13/lib/: libhdf4.settings  libszip.lib  libzlib.lib
Preprocess/Dependencies/HDF5 x64-1-82-0/cmake/: hdf5-config.cmake  hdf5-targets-relwithdebinfo.cmake  hdf5-targets.cmake  zlib-targets.cmake
Preprocess/Thread/: AnomalyAnalysis.cpp  AnomalyAnalysis.h  Convertor.cpp  Convertor.h
algorithm/: Algo.h  BFS.cpp  Batch.cpp  DBSCAN.cpp  DBSCAN.h  DcSTCA.cpp  DcSTMC.cpp  DcSTMC.h  Evaluation.cpp  RTree.cpp  RTree.h  algo.h
file-operator/: Csv.cpp  Csv.h  FileOperator.h  Hdf5Opt.cpp  Hdf5Opt.h  Hdfv.cpp  Hdfv.h  RFileOpt.h  Rst.h  SFileOpt.cpp  SFileOpt.h  Shp.cpp  Shp.h  Tif.cpp  Tif.h  TifOpt.cpp  TifOpt.h  hdf5Opt.cpp  hdf5Opt.h  hdfOpt.cpp  hdfOpt.h  tiffOpt.cpp  tiffOpt.h
hdf5-1.13.3/c++/src/: H5OcreatProp.h
hdf5-1.13.3/config/: conclude_fc.am  gnu-cxxflags
hdf5-1.13.3/examples/: h5_vds.c
hdf5-1.13.3/fortran/src/: H5_buildiface.F90
hdf5-1.13.3/hl/src/: H5LD.c  H5LDpublic.h  H5LTanalyze.c
hdf5-1.13.3/hl/test/: test_ld.c
hdf5-1.13.3/java/src/: Makefile.am
hdf5-1.13.3/java/test/: TestH5.java  TestH5A.java  TestH5D.java
hdf5-1.13.3/src/: H5Cepoch.c  H5Cquery.c  H5Ctag.c  H5Ctest.c  H5Dnone.c  H5Dsingle.c  H5Oflush.c
hdf5-1.13.3/testpar/: t_init_term.c  t_prestart.c  t_pshutdown.c
model/: shape.h
operator/: gdalOpt.cpp  hdfOpt.cpp  opt.cpp  opt.h
pkg/GDAL-x64-2-2-2/lib/: gdal_i.lib
pkg/HDF4-x64-4-2-13/cmake/: hdf4-config.cmake  hdf4-targets.cmake  jpeg-config.cmake  jpeg-targets-release.cmake  jpeg-targets.cmake  szip-config.cmake  szip-targets.cmake  zlib-config.cmake  zlib-targets.cmake
pkg/HDF4-x64-4-2-13/include/: atom.h  bitvect.h  cdeflate.h  cnbit.h  cnone.h  crle.h  cskphuff.h  cszip.h  dynarray.h  h4config.h  hchunks.h  hcomp.h  hcompi.h  linklist.h  mfgr.h  mstdio.h
pkg/HDF4-x64-4-2-13/lib/: libhdf.lib  libjpeg.lib  libmfhdf.lib  libxdr.lib
pkg/HDF5 x64-1-82-0/: HDF518_Examples.cmake
pkg/HDF5 x64-1-82-0/HDF5Examples/: CMakeLists.txt
pkg/HDF5 x64-1-82-0/cmake/: hdf5-config.cmake  hdf5-targets.cmake  szip-config.cmake  szip-targets.cmake  zlib-config.cmake  zlib-targets.cmake
pkg/HDF5 x64-1-82-0/lib/: hdf5_cpp.lib  hdf5_hl.lib  hdf5_hl_cpp.lib  libhdf5_hl_cpp.lib  libhdf5_tools.lib  szip.lib  zlib.lib
pkg/Matrix/include/: Matrix.h
pkg/NETCDF-x64/lib/: libnetcdf.settings  netcdf.lib
pkg/release-1930-x64-gdal-3-5-2-mapserver-8-0-0-libs/include/: mapserver-config.h  mapserver-version.h
pkg/release-1930-x64-gdal-3-5-2-mapserver-8-0-0-libs/lib/: freexl.lib  freexl_i.lib  gdal_i.lib  mapserver.lib  webp.lib  webpdecoder.lib  webpdemux.lib
pkg/release-1930-x64-gdal-3-5-2-mapserver-8-0-0/doc/: gdal_deps.txt  gdal_revision.txt  ms_deps.txt  ogr_formats.txt
pkg/sidx/lib/: spatialindex-64.lib  spatialindex_c-64.lib
preprocess/: Reader.cpp  Reader.h
process/: AnomalyAnalysis.cpp  AnomalyAnalysis.h  Convertor.cpp  Convertor.h  DataProcess.h  Postprocessor.cpp  Postprocessor.h  Reader.cpp  Reader.h  Vectorization.cpp  Vectorization.h
release-1930-x64-gdal-3-5-2-mapserver-8-0-0-libs/lib/: mapcache.lib  openjp2.lib  spatialite_i.lib  tiff.lib  webpmux.lib
release-1930-x64-gdal-3-5-2-mapserver-8-0-0/doc/: gdal_formats.txt  gdal_version.txt  mapcache_revision.txt
resource/: point_out.dbf
sidx/lib/: spatialindex-64.lib
thread/: AnomalyAnalysis.cpp  Convertor.cpp
util/: ThreadPool.h  util.cpp  util.h
x64/Debug/: Preprocess.exp  Preprocess.lib  X.exp  X.lib
(+85 files in other folders)
